# drone_ros2_px4

src/my_drone_pkg/: CMakeLists.txt  package.xml
src/px4_offboard_cpp/: CMakeLists.txt  package.xml
src/px4_offboard_cpp/src/: offboard_control.cpp
